enhance the html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-welcome! welcome!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Walala Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      background: linear-gradient(135deg, #6dd5ed, #2193b0);
+      color: #fff;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background: rgba(0,0,0,0.3);
+      padding: 40px 60px;
+      border-radius: 15px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 16px;
+      font-size: 2.5em;
+      letter-spacing: 2px;
+    }
+    p {
+      font-size: 1.2em;
+      margin-bottom: 10px;
+    }
+    a {
+      color: #ffe082;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .youtube {
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Welcome to Walala!</h1>
+    <p>This is the enhanced homepage for your Walala website.</p>
+    <p>Explore more on <a href="https://github.com/OOHYOHY/walala" target="_blank">GitHub</a>.</p>
+    <div class="youtube">
+      <a href="https://www.youtube.com/@VeofreeVeofree" target="_blank">
+        <img src="https://www.youtube.com/s/desktop/bc6fe8b7/img/favicon_144x144.png" alt="YouTube" width="40" style="vertical-align:middle;">
+        Visit our YouTube Channel
+      </a>
+    </div>
+  </div>
+</body>
+</html>
